Beta b13: * Fixed loading spinner in Firefox.  It was too small, causing its rotation to be lopsided. * Toast messages (popups in the bottom right) no longer overlap the playback controls as long as your playback controls fit on one line. * Toast messages no longer appear in front of playback settings/speed/quality panels. * Fixed dropdown boxes not opening when using a touchscreen with Microsoft Edge. * In Microsoft browsers on Windows, the "Hold Visual" (rectangle that appears when long-pressing) no longer appears when operating the PTZ controls with touch. * Fixed a bug where some compatibility warnings intended for the About panel might not get shown.

--- a/ui3/ui3.css
+++ b/ui3/ui3.css
@@ -2136,6 +2136,15 @@ div.icon, a.icon
 #toast-container
 {
 	font-size: 16px;
+	bottom: 64px;
+}
+.sizeMedium #toast-container
+{
+	bottom: 48px;
+}
+.sizeSmall #toast-container
+{
+	bottom: 36px;
 }
 /* camimg */
 #camimg_wrapper
@@ -2447,6 +2456,7 @@ div.icon, a.icon
 	overflow: hidden;
 	overflow-y: auto;
 	border: 1px solid #666666;
+	z-index: 9999999; /* Must be higher than toast messages or else toast messages can get in the way */
 }
 
 .playbackSettingsLine
